# MilitechTetris

./: .gitignore  CODEOWNERS  Dockerfile  README.md  Try  create fry
Tetris/: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Tetris  makefile
Tetris/Tetris_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Tetris/Tetris_autogen/3XOYHQ47YQ/: moc_server.cpp  moc_server.cpp.d
Tetris/Tetris_autogen/UVLADIE3JM/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
Tetris/client/client/: consoleclient.h  main.cpp
Tetris/src/: .gitignore  AuthDialog.cpp  AuthDialog.h  Block.cpp  Block.h  Cube.cpp  Cube.h  Game.cpp  Game.h  GameRenderer.cpp  GameRenderer.h  GameRenderer.hpp  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  RendererFacilities.cpp  RendererFacilities.hpp  consoleclient.cpp  consoleclient.h  main.cpp  tetris.pro
Tetris/src/core/: Board.cpp  Board.hpp  Tetromino.hpp  TetrominoFactory.hpp  Tetromino_I.hpp  Tetromino_J.hpp  Tetromino_L.hpp  Tetromino_O.hpp  Tetromino_S.hpp  Tetromino_T.hpp  Tetromino_Z.hpp
Tetris/src/server/: function.cpp  function.h  main.cpp  server.cpp  server.h  singleton.cpp  singleton.h
client/: consoleclient.cpp  consoleclient.h  main.cpp
html/: _block_8h_source.html  _game_renderer_8h_source.html  _main_window_8h_source.html  _player_8h_source.html  annotated.html  class_block-members.html  class_block.html  class_game_renderer-members.html  class_game_renderer.html  class_main_window-members.html  class_main_window.html  class_my_tcp_server-members.html  class_my_tcp_server.html  class_player-members.html  class_player.html  class_sing_client-members.html  class_sing_client.html  class_sing_client_destroyer-members.html  class_sing_client_destroyer.html  class_singleton-members.html  class_singleton.html  classes.html  consoleclient_8h_source.html  dir_0f6d2c1b3075b46faa7a162847d4bd00.html  dir_377b27d6a5b4570e783cfdba2a3b38d8.html  doxygen_crawl.html  (+22 more)
(+48 files in other folders)
